# uber-stock-prices

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/raw/: uber_stock_data.csv
notebooks/: report.ipynb
outputs/metrics/: garch_model_summary.txt  metrics_summary_table.csv  return_model_summary.txt
scripts/: run_pipeline.py
src/uber_stock/: config.py  data_loader.py  diagnostics.py  features.py  models.py  pipeline.py  plots.py
